[FIX] Website_blog: Fixed bugs in blog like breadcrumb not showing in full length and horizontal scrolling in mobile view after using inline discussions.

--- a/addons/website_blog/static/src/css/website_blog.css
+++ b/addons/website_blog/static/src/css/website_blog.css
@@ -75,7 +75,9 @@ div#blog_angle_down a:hover {
   .cover_footer .blog_title {
     top: 2%;
   }
-}
+  .blog_content_width{
+      max-width:260px;
+  }
 /*Inline Discussion */
 .discussion {
   padding: 5px 10px 10px;
